<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">
<EditText
    android:id='@+id/txt_name'
    android:layout_width='fill_parent'
    android:layout_height='wrap_content'
    android:hint="@string/name" >

    <requestFocus />
</EditText>

<EditText
    android:id='@+id/txt_price'
    android:layout_width='match_parent'
    android:layout_height='wrap_content'
    android:hint="@string/price">
</EditText>

<RelativeLayout
    android:layout_width='match_parent'
    android:layout_height='wrap_content' >

    <Button
        android:id='@+id/btn_create'
        android:layout_width='120dp'
        android:layout_height='wrap_content'
        android:text="@string/add" />

    <Button
        android:id='@+id/btn_cancel'
        android:layout_width='120dp'
        android:layout_height='wrap_content'
        android:layout_alignParentTop='true'
        android:layout_marginLeft='10dp'
        android:layout_toRightOf='@+id/btn_create'
        android:text="@string/cancel_dialog_register" />
</RelativeLayout>
</LinearLayout>