<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.baniek.fridgemobile.Activity.LoginActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordText"
        android:hint="@string/password"
        android:layout_below="@+id/LoginText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="admin"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/LoginText"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="admin"/>

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginButton"
        android:layout_alignBaseline="@+id/CreateButton"
        android:layout_alignBottom="@+id/CreateButton"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/CreateButton"
        android:layout_marginStart="14dp"
        android:layout_below="@+id/PasswordText"
        android:layout_toEndOf="@+id/LoginButton" />

    <TextView
        android:text="@string/loginBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
